--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Testimonials grid section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 15px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main class="blog">
@@ -169,7 +158,7 @@
       </article>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
@@ -177,6 +166,6 @@
       <a href="https://www.frontendmentor.io/profile/Stroudy" target="_blank"
         >Steven Stroud</a
       >.
-    </div>
+    </footer>
   </body>
 </html>
