--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Frontend Mentor | Testimonials grid section</title>
   </head>
   <body>
+    <h1 class="visually-hidden">5 Varified candidates blog</h1>
     <main class="blog">
       <article class="blog__article">
         <div class="blog__header">
