--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="visually-hidden">5 Varified candidates blog</h1>
     <main class="blog">
       <article class="blog__article">
-        <div class="blog__header">
+        <figure class="blog__header">
           <img
             class="blog__img"
             alt="Portrait of Daniel, smiling confidently."
@@ -29,16 +29,16 @@
             height="28"
             width="28"
           />
-          <div class="blog__name-verified">
+          <figcaption class="blog__name-verified">
             <h2 class="blog__name">Daniel Clifford</h2>
-            <h3 class="blog__verified">Verified Graduate</h3>
-          </div>
-        </div>
-        <h4 class="blog__title">
+            <p class="blog__verified">Verified Graduate</p>
+          </figcaption>
+        </figure>
+        <p class="blog__title">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny’s worth.
-        </h4>
+        </p>
         <p class="blog__text">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been
           looking to make a transition and have heard some people who had an
@@ -51,7 +51,7 @@
       </article>
 
       <article class="blog__article">
-        <div class="blog__header">
+        <figure class="blog__header">
           <img
             src="./images/image-jonathan.jpg"
             alt="Portrait of jonathan, smiling confidently."
@@ -59,14 +59,14 @@
             height="28"
             width="28"
           />
-          <div class="blog__name-verified">
+          <figcaption class="blog__name-verified">
             <h2 class="blog__name">Jonathan Walters</h2>
-            <h3 class="blog__verified">Verified Graduate</h3>
-          </div>
-        </div>
-        <h4 class="blog__title">
+            <p class="blog__verified">Verified Graduate</p>
+          </figcaption>
+        </figure>
+        <p class="blog__title">
           The team was very supportive and kept me motivated
-        </h4>
+        </p>
         <p class="blog__text">
           “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
@@ -75,7 +75,7 @@
       </article>
 
       <article class="blog__article">
-        <div class="blog__header">
+        <figure class="blog__header">
           <img
             src="./images/image-jeanette.jpg"
             alt="Portrait of Jeanette, smiling confidently."
@@ -83,14 +83,12 @@
             height="28"
             width="28"
           />
-          <div class="blog__name-verified">
+          <figcaption class="blog__name-verified">
             <h2 class="blog__name">Jeanette Harmon</h2>
-            <h3 class="blog__verified">Verified Graduate</h3>
-          </div>
-        </div>
-        <h4 class="blog__title">
-          An overall wonderful and rewarding experience
-        </h4>
+            <p class="blog__verified">Verified Graduate</p>
+          </figcaption>
+        </figure>
+        <p class="blog__title">An overall wonderful and rewarding experience</p>
         <p class="blog__text">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
@@ -98,7 +96,7 @@
       </article>
 
       <article class="blog__article">
-        <div class="blog__header">
+        <figure class="blog__header">
           <img
             src="./images/image-patrick.jpg"
             alt="Portrait of Patrick, smiling confidently."
@@ -106,16 +104,16 @@
             height="28"
             width="28"
           />
-          <div class="blog__name-verified">
+          <figcaption class="blog__name-verified">
             <h2 class="blog__name">Patrick Abrams</h2>
-            <h3 class="blog__verified">Verified Graduate</h3>
-          </div>
-        </div>
-        <h4 class="blog__title">
+            <p class="blog__verified">Verified Graduate</p>
+          </figcaption>
+        </figure>
+        <p class="blog__title">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
-        </h4>
+        </p>
         <p class="blog__text">
           “ The staff seem genuinely concerned about my progress which I find
           really refreshing. The program gave me the confidence necessary to be
@@ -127,7 +125,7 @@
       </article>
 
       <article class="blog__article">
-        <div class="blog__header">
+        <figure class="blog__header">
           <img
             src="./images/image-kira.jpg"
             alt="Portrait of Kira, smiling confidently."
@@ -135,14 +133,14 @@
             height="28"
             width="28"
           />
-          <div class="blog__name-verified">
+          <figcaption class="blog__name-verified">
             <h2 class="blog__name">Kira Whittle</h2>
-            <h3 class="blog__verified">Verified Graduate</h3>
-          </div>
-        </div>
-        <h4 class="blog__title">
+            <p class="blog__verified">Verified Graduate</p>
+          </figcaption>
+        </figure>
+        <p class="blog__title">
           Such a life-changing experience. Highly recommended!
-        </h4>
+        </p>
         <p class="blog__text">
           “ Before joining the bootcamp, I’ve never written a line of code. I
           needed some structure from professionals who can help me learn
